Add new element

--- a/menu.html
+++ b/menu.html
@@ -60,6 +60,11 @@
             font-size: 0em;
             line-height: 1.5;
         }
+
+        p {
+            font-size: 0.8em;
+            font-weight: 300;
+        }
     </style>
 
 </head>
@@ -71,36 +76,42 @@
                 <h4>Tap here</h4>
                 <h5>Hello</h5>
             </div>
+            <p>100%</p>
         </div>
         <div class="box box2">
             <div class="name">
                 <h4>Tap here</h4>
                 <h5>Hello</h5>
             </div>
+            <p>100%</p>
         </div>
         <div class="box box3">
             <div class="name">
                 <h4>Tap here</h4>
                 <h5>Hello</h5>
             </div>
+            <p>100%</p>
         </div>
         <div class="box box4">
             <div class="name">
                 <h4>Tap here</h4>
                 <h5>Hello</h5>
             </div>
+            <p>100%</p>
         </div>
         <div class="box box5">
             <div class="name">
                 <h4>Tap here</h4>
                 <h5>Hello</h5>
             </div>
+            <p>100%</p>
         </div>
         <div class="box box6">
             <div class="name">
                 <h4>Tap here</h4>
                 <h5>Hello</h5>
             </div>
+            <p>100%</p>
         </div>
     </div>
 </body>
