--- a/menu.html
+++ b/menu.html
@@ -8,7 +8,21 @@
     <title>Menu</title>
 
     <style>
-        .container {
+        * {
+            margin: 0px;
+            padding: 0px;
+            box-sizing: border-box;
+        }
+
+        body {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            min-height: 100vh;
+            background-color: #eeeeee;
+        }
+
+        body .container {
             background-color: lightblue;
             width: 300px;
             font-size: 1.2em;
@@ -17,7 +31,7 @@
             box-shadow: 6px 6px 24px rgba(0, 0, 0, 0.1);
         }
 
-        .box {
+        body .container .box {
             display: flex;
             justify-content: space-between;
             align-items: center;
@@ -28,42 +42,87 @@
             color: black;
         }
 
-        .box2 {
+        body .container .box.box2 {
             background-color: lightcyan;
         }
 
-        .box3 {
+        body .container .box.box3 {
             background-color: lightgoldenrodyellow;
         }
 
-        .box4 {
+        body .container .box.box4 {
             background-color: lightgreen;
         }
 
-        .box5 {
+        body .container .box.box5 {
             background-color: lightgrey;
         }
 
-        .box6 {
+        body .container .box.box6 {
             background-color: lightseagreen;
         }
 
-        .name {
+        body .container .box .name {
             width: 80px;
         }
 
-        h4, h5{ 
+        body .container .box .name h4,
+        body .container .box .name h5 {
             font-weight: 300;
         }
 
-        h5 {
+        body .container .box .name h5 {
             font-size: 0em;
             line-height: 1.5;
         }
 
-        p {
+        body .container .box p {
             font-size: 0.8em;
             font-weight: 300;
+        }
+
+        body .container .box:before {
+            content: "";
+            height: 0px;
+            width: 0px;
+            border: 2px solid white;
+            border-radius: 50%;
+            margin-left: -50%;
+            background-color: white;
+            background-size: contain;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        body .container .box.box1:before,
+        body .container .box.box3:before,
+        body .container .box.box5:before {
+            background-image: url("https://ss0.bdstatic.com/70cFuHSh_Q1YnxGkpoWK1HF6hhy/it/u=2018924539,411629637&fm=27&gp=0.jpg");
+        }
+
+        body .container .box.box2:before,
+        body .container .box.box4:before,
+        body .container .box.box6:before {
+            background-image: url("https://timgsa.baidu.com/timg?image&quality=80&size=b9999_10000&sec=1512997008&di=fcf0ab90041e183ff02d56f9c6a98157&imgtype=jpg&er=1&src=http%3A%2F%2Fimg.sc115.com%2Fuploads%2Fsc%2Fpng%2F141015%2Fgoogle-launcher.png");
+        }
+
+        body .container .box:hover:before {
+            content: "";
+            height: 50px;
+            width: 50px;
+            border-radius: 50%;
+            margin-left: 0%;
+            transition: all 0.4s;
+        }
+
+        body .container .box:hover {
+            height: 120px;
+            transition: all 0.3s;
+        }
+
+        body .container .box:hover .name h5 {
+            font-size: 0.7em;
+            transition: all 0.6s;
         }
     </style>
 
